Tayler--working on addnewpet.html

--- a/src/main/resources/templates/petProfile/addnewpet.html
+++ b/src/main/resources/templates/petProfile/addnewpet.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 
-<form method="post">
+<form method="post" action="/petProfile/addnewpet">
     <input type="text" name="addnewpet">
     <input type="add" value="Add New Pet">
-    <button type="submit">Add New Pet</button>
+    <button type="submit" class="btn btn-primary">Add New Pet</button>
 </form>
 
 </body>
