Tayler--edited build.gradle file to implement thymeleaf html template, successfully got an Add New Pet button to appear!

--- a/src/main/resources/templates/petProfile/addnewpet.html
+++ b/src/main/resources/templates/petProfile/addnewpet.html
@@ -6,9 +6,7 @@
 <body>
 
 <form method="post" action="/petProfile/addnewpet">
-    <input type="text" name="addnewpet">
-    <input type="add" value="Add New Pet">
-    <button type="submit" class="btn btn-primary">Add New Pet</button>
+    <input type="submit" value="Add New Pet" class="btn btn-success">
 </form>
 
 </body>
