--- a/src/main/resources/templates/petProfile/addnewpet.html
+++ b/src/main/resources/templates/petProfile/addnewpet.html
@@ -10,29 +10,58 @@
     </script>
 </head>
 
-<!--<body>-->
-<!--<form method="post">-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Add New Pet</title>
+</head>
+<body>
+<form method="post">
 
-<!--    <div class="form-group">-->
-<!--        <label>Name-->
-<!--            <input th:field="${PetProfile.name}" class="form-control">-->
-<!--        </label>-->
-<!--        <p class="error" th:errors="${PetProfile.name}"></p>-->
-<!--    </div>-->
+    <div class="form-group">
+        <label for="name">Name</label>
+        <input id="name" name="name" class="form-control" type="text">
+    </div>
 
-<!--    <div class="form-group">-->
-<!--        <label>Breed-->
-<!--            <input th:field="${PetProfile.breed}" class="form-control">-->
-<!--        </label>-->
-<!--        <p class="error" th:errors="${PetProfile.breed}"></p>-->
-<!--    </div>-->
+    <div class="form-group">
+        <label for="breed">Breed</label>
+        <input id="breed" name="breed" class="form-control" type="text">
+    </div>
 
-<!--    <div class="form-group">-->
-<!--        <label>Age-->
-<!--            <input th:field="${PetProfile.age}" class="form-control">-->
-<!--        </label>-->
-<!--        <p class="error" th:errors="${PetProfile.age}"></p>-->
-<!--    </div>-->
+    <div class="form-group">
+        <label for="age">Age</label>
+        <input id="age" name="age" class="form-control" type="text">
+    </div>
+
+    <div class="form-group">
+        <label for="weight">Weight</label>
+        <input id="weight" name="weight" class="form-control" type="text">
+    </div>
+
+    <div class="form-group">
+        <label for="birthdate">Birthdate</label>
+        <input id="birthdate" name="birthdate" class="form-control" type="text">
+    </div>
+
+    <div class="form-group">
+        <label for="medication">Medication</label>
+        <input id="medication" name="medication" class="form-control" type="text">
+    </div>
+
+    <div class="form-group">
+        <label for="allergy">Allergy</label>
+        <input id="allergy" name="allergy" class="form-control" type="text">
+    </div>
+
+    <div class="form-group">
+        <label for="microchip">Microchip Number</label>
+        <input id="microchip" name="microchip" class="form-control" type="text">
+    </div>
+
+    <div class="form-group">
+        <label for="diagnoses">Diagnoses</label>
+        <input id="diagnoses" name="diagnoses" class="form-control" type="text">
+    </div>
 
     <div class="form-group">
         <input type="submit" value="Add New Pet" class="btn btn-success" onClick="showPopup()">
