--- a/src/main/resources/templates/petProfile/addNewPetSuccess.html
+++ b/src/main/resources/templates/petProfile/addNewPetSuccess.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <title>Success</title>
+    <title>New Pet Added</title>
 </head>
 <body>
-<h1>NEW PET ADDED</h1>
+<h1>New Pet Added</h1>
+<p>Thank you for registering your pet! Click here to return to your profile. </p>
 </body>
 </html>
