--- a/src/main/resources/templates/petProfile/addNewPet.html
+++ b/src/main/resources/templates/petProfile/addNewPet.html
@@ -9,9 +9,9 @@
 
     <h1>Add New Pet</h1>
 
-<form action = "/petProfile/addNewPet" method = "post">
+<form action="/petProfile/addNewPet" method="post">
 
-    <label for = "name">Name:</label>
+    <label for="name">Name:</label>
     <input type="text" id="name" name="name" required><br>
 
     <label for="petType">Pet Type:</label>
@@ -24,28 +24,28 @@
         <option value="OTHER">Other</option>
     </select><br>
 
-    <label for = "breed">Breed:</label>
+    <label for="breed">Breed:</label>
     <input type="text" id="breed" name="breed" required><br>
 
-    <label for = "age">Age:</label>
-    <input type="text" id="age" name="age" required><br>
+    <label for="age">Age:</label>
+    <input type="number" id="age" name="age" required><br>
 
-    <label for = "weight">Weight:</label>
-    <input type="text" id="weight" name="weight" required><br>
+    <label for="weight">Weight:</label>
+    <input type="number" id="weight" name="weight" required><br>
 
-    <label for = "birthdate">Birthdate:</label>
-    <input type="text" id="birthdate" name="birthdate" required><br>
+    <label for="birthdate">Birthdate:</label>
+    <input type="date" id="birthdate" name="birthdate" required><br>
 
-    <label for = "medication">Medication:</label>
+    <label for="medication">Medication:</label>
     <input type="text" id="medication" name="medication"><br>
 
-    <label for = "allergy">Allergy:</label>
+    <label for="allergy">Allergy:</label>
     <input type="text" id="allergy" name="allergy"><br>
 
-    <label for = "microchip">Microchip Number:</label>
-    <input type="text" id="microchip" name="microchip"><br>
+    <label for="microchip">Microchip Number:</label>
+    <input type="number" id="microchip" name="microchip"><br>
 
-    <label for = "diagnoses">Diagnoses:</label>
+    <label for="diagnoses">Diagnoses:</label>
     <input type="text" id="diagnoses" name="diagnoses"><br>
 
         <input type="submit" value="Add New Pet" class="btn btn-success">
