Tayler--working on sql connection issue

--- a/src/main/resources/templates/petProfile/addNewPet.html
+++ b/src/main/resources/templates/petProfile/addNewPet.html
@@ -43,7 +43,7 @@
     <input type="text" id="allergy" name="allergy"><br>
 
     <label for="microchip">Microchip Number:</label>
-    <input type="number" id="microchip" name="microchip"><br>
+    <input type="text" id="microchip" name="microchip"><br>
 
     <label for="diagnoses">Diagnoses:</label>
     <input type="text" id="diagnoses" name="diagnoses"><br>
