--- a/src/main/resources/templates/petProfile/addNewPetSuccess.html
+++ b/src/main/resources/templates/petProfile/addNewPetSuccess.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>New Pet Added</title>
+    <title>New Pet Added!</title>
 </head>
 <body>
-<h1>New Pet Added</h1>
-<p>Thank you for registering your pet! Click here to return to your profile. </p>
+<h1>New Pet Added!</h1>
+<p>Thank you for adding your pet! Click here to return to your profile. </p>
 </body>
-</html>
+</html
