Successfully created delete function for CareProfController-- works as intended.

--- a/src/main/resources/templates/professionals/index.html
+++ b/src/main/resources/templates/professionals/index.html
@@ -17,7 +17,7 @@
     </tr>
     </thead>
     <tr th:each="professional : ${professionals}">
-        <td><a th:text="${professional.name}" th:href="@{'/professionals/view/ + ${professional.id}"></a></td>
+        <td th:text="${professional.name} + ${professional.id}"></td>
     </tr>
 
 </table>
