Created a connection between angular front end and java/mysql back. It's ugly, but it is pulling data!

--- a/src/main/resources/templates/professionals/add.html
+++ b/src/main/resources/templates/professionals/add.html
@@ -31,7 +31,7 @@
     <div class="form-group">
         <label th:for="careType">Care Type</label>
         <input id="careType" name="careType" class="form-control" type="text">
-        <span th:errors="${professional.careType}" class="error"></span>
+<!--        <span th:errors="${professional.careType}" class="error"></span>-->
     </div>
 
 
