Tayler--made some edits, PetProfile form still not working

--- a/src/main/resources/templates/petProfile/addNewPet.html
+++ b/src/main/resources/templates/petProfile/addNewPet.html
@@ -37,18 +37,18 @@
     <input type="date" id="birthdate" name="birthdate" required><br>
 
     <label for="medication">Medication:</label>
-    <input type="text" id="medication" name="medication"><br>
+    <input type="text" id="medication" name="medication" required><br>
 
     <label for="allergy">Allergy:</label>
-    <input type="text" id="allergy" name="allergy"><br>
+    <input type="text" id="allergy" name="allergy" required><br>
 
     <label for="microchip">Microchip Number:</label>
-    <input type="text" id="microchip" name="microchip"><br>
+    <input type="text" id="microchip" name="microchip" required><br>
 
     <label for="diagnoses">Diagnoses:</label>
-    <input type="text" id="diagnoses" name="diagnoses"><br>
+    <input type="text" id="diagnoses" name="diagnoses" required><br>
 
-    <input type="submit" value="Add New Pet" class="btn btn-success">
+    <input type="submit" value="Add New Pet">
 </form>
 
 </body>
