Tayler--created a photo upload field

--- a/src/main/resources/templates/petProfile/addNewPet.html
+++ b/src/main/resources/templates/petProfile/addNewPet.html
@@ -48,6 +48,10 @@
     <label for="diagnoses">Diagnoses:</label>
     <input type="text" id="diagnoses" name="diagnoses" required><br>
 
+    <label for="diagnoses">Photo:</label>
+    <input type="file" id="photo" name="photo" required><br>
+<!--    <input type="submit" value="Upload">-->
+
     <input type="submit" value="Add New Pet">
 </form>
 
