--- a/src/main/resources/templates/petProfile/addNewPetSuccess.html
+++ b/src/main/resources/templates/petProfile/addNewPetSuccess.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>New Pet Added!</title>
+    <title>Success</title>
 </head>
 <body>
-<h1>New Pet Added!</h1>
-<p>Thank you for adding your pet! Click here to return to your profile. </p>
+<h1>NEW PET ADDED</h1>
 </body>
 </html>
