Tayler--initial commit PetValidationTayler

--- a/src/main/resources/templates/petProfile/addNewPet.html
+++ b/src/main/resources/templates/petProfile/addNewPet.html
@@ -9,7 +9,7 @@
 
 <h1>Add New Pet</h1>
 
-<form action="/petProfile/addNewPet" method="post" onsubmit="formatDate()">
+<form action="/petProfile/addNewPet" method="post">
 
     <label for="name">Name:</label>
     <input type="text" id="name" name="name"><br>
