Fullcalendar io is up and running. I also add routing to the pages and now pages are rendered when you navigate to home, users, calendar, etc.

--- a/petrax-frontend/src/app/app.component.html
+++ b/petrax-frontend/src/app/app.component.html
@@ -1,2 +1,11 @@
-<h1>FRONTEND TEST</h1>
-<app-user-list></app-user-list>
+<header>
+  <!-- Your navigation bar and other header elements go here -->
+</header>
+
+<div class="app-container">
+  <router-outlet></router-outlet>
+</div>
+
+<footer>
+  <!-- Your footer content goes here -->
+</footer>
