--- a/petrax-frontend/src/app/calendar/calendar.component.html
+++ b/petrax-frontend/src/app/calendar/calendar.component.html
@@ -1,19 +1,50 @@
 <div class="app-container">
-  <h1>Yay!! Our calendar works!!</h1>
-  <div class="flex-container">
+  <h1 class="app-heading">Yay!! Our calendar works!!</h1>
+  <div class="content-container">
     <div class="calendar-container">
       <full-calendar [options]="calendarOptions"></full-calendar>
-      <button class="add-event-button" (click)="onAddEvent()">Add Event</button>
+      <div id="calendar"></div>
     </div>
-    <div class="list-container">
-      <h2>List of Events</h2>
-      <ul>
-        <li>Get this project done!</li>
-        <li>Add dynamic data here</li>
-        <!-- Add more list items as needed -->
-      </ul>
+    <div class="upcoming-events">
+      <div class="event-list-container">
+        <h2>Upcoming Events</h2>
+        <ul>
+          <li *ngFor="let event of upcomingEvents">
+            <span class="event-title">{{ event.title }}</span>
+            <span class="event-date">{{ event.start | date }}</span>
+          </li>
+        </ul>
+        <button class="add-event-button" (click)="openAddEventModal()">Add Event</button>
+      </div>
     </div>
   </div>
 </div>
 
 <router-outlet></router-outlet>
+
+
+
+
+
+
+
+
+<!--
+<div class="app-container">
+  <h1>Yay!! Our calendar works!!</h1>
+  <div class="content-container">
+    <div class="calendar-container">
+      <full-calendar [options]="calendarOptions"></full-calendar>
+    </div>
+    <div class="event-list-container">
+      <h2>Upcoming Events</h2>
+      <ul>
+        <li *ngFor="let event of upcomingEvents">{{ event.title }} - {{ event.start }}</li>
+      </ul>
+      <button class="add-event-button" (click)="openAddEventModal()">Add Event</button>
+    </div>
+  </div>
+</div>
+
+<router-outlet></router-outlet>
+-->
