installed dependencies for bootstrap styling

--- a/petrax-frontend/src/app/home/home.component.html
+++ b/petrax-frontend/src/app/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<div class="container">
+    <h1>Hello, Bootstrap in Angular!</h1>
+    <button class="btn btn-primary">Click Me</button>
+  </div>
