--- a/src/main/resources/templates/authentication/register.html
+++ b/src/main/resources/templates/authentication/register.html
@@ -1,31 +1,49 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en" xmlns:th="http://www.thymeleaf.org/">-->
+<!--<head th:replace="fragments :: head"></head>-->
+<!--<body class="container">-->
+
+<!--<header th:replace="fragments :: header"></header>-->
+
+<!--<form method="post">-->
+<!--  <div class="form-group">-->
+<!--    <label>Username-->
+<!--      <input class="form-control" th:field="${registerFormDTO.username}" />-->
+<!--    </label>-->
+<!--    <p class="error" th:errors="${registerFormDTO.username}"></p>-->
+<!--  </div>-->
+<!--  <div class="form-group">-->
+<!--    <label>Password-->
+<!--      <input class="form-control" th:field="${registerFormDTO.password}" type="password" />-->
+<!--    </label>-->
+<!--    <p class="error" th:errors="${registerFormDTO.password}"></p>-->
+<!--  </div>-->
+<!--  <div class="form-group">-->
+<!--    <label>Verify Password-->
+<!--      <input class="form-control" th:field="${registerFormDTO.verifyPassword}" type="password" />-->
+<!--    </label>-->
+<!--  </div>-->
+
+<!--  <input type="submit" class="btn btn-primary" value="Register" />-->
+<!--</form>-->
+
+<!--</body>-->
+<!--</html>-->
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head th:replace="fragments :: head"></head>
-<body class="container">
-
-<header th:replace="fragments :: header"></header>
-
-<form method="post">
-  <div class="form-group">
-    <label>Username
-      <input class="form-control" th:field="${registerFormDTO.username}" />
-    </label>
-    <p class="error" th:errors="${registerFormDTO.username}"></p>
-  </div>
-  <div class="form-group">
-    <label>Password
-      <input class="form-control" th:field="${registerFormDTO.password}" type="password" />
-    </label>
-    <p class="error" th:errors="${registerFormDTO.password}"></p>
-  </div>
-  <div class="form-group">
-    <label>Verify Password
-      <input class="form-control" th:field="${registerFormDTO.verifyPassword}" type="password" />
-    </label>
-  </div>
-
-  <input type="submit" class="btn btn-primary" value="Register" />
+<html>
+<head>
+  <title>Register for PETrax</title>
+</head>
+<body>
+<h1>Register for PETrax</h1>
+<form action="/authentication/register" method="post">
+  <label for="username">Username:</label>
+  <input type="text" id="username" name="username"><br>
+  <label for="password">Password:</label>
+  <input type="text" id="password" name="password"><br>
+  <label for="verifyPassword">Verify Password:</label>
+  <input type="text" id="verifyPassword" name="verifyPassword"><br>
+  <input type="submit" value="Register">
 </form>
-
 </body>
 </html>
