Tayler--backend forms work with Ryan's date format fix

--- a/src/main/resources/templates/petProfile/addNewPet.html
+++ b/src/main/resources/templates/petProfile/addNewPet.html
@@ -34,7 +34,7 @@
     <input type="number" id="weight" name="weight"><br>
 
     <label for="birthdate">Birthdate:</label>
-    <input type="text" id="birthdate" name="birthdate"><br>
+    <input type="date" id="birthdate" name="birthdate"><br>
 
     <label for="medication">Medication:</label>
     <input type="text" id="medication" name="medication"><br>
