--- a/src/main/resources/templates/petProfile/deletePet.html
+++ b/src/main/resources/templates/petProfile/deletePet.html
@@ -11,7 +11,7 @@
     <input type="text" id="name" name="name" required><br>
 
     <label for="birthdate">Birthdate:</label>
-    <input type="text" id="birthdate" name="birthdate" required><br>
+    <input type="date" id="birthdate" name="birthdate" required><br>
 
     <input type="submit" value="Delete Pet">
 </form>
