--- a/petrax-frontend/src/app/calendar/calendar.component.html
+++ b/petrax-frontend/src/app/calendar/calendar.component.html
@@ -1,5 +1,5 @@
 <div class="app-container">
-  <h1 class="app-heading">Yay!! Our calendar works!!</h1>
+  <h1 class="app-heading">PETrax 🐕 🐈 🦜 🦎</h1>
   <div class="content-container">
     <div class="calendar-container">
       <full-calendar [options]="calendarOptions"></full-calendar>
@@ -8,7 +8,7 @@
       <div class="event-list-container">
         <h2>Upcoming Events</h2>
         <ul>
-          <li *ngFor="let event of upcomingEvents">
+          <li *ngFor="let event of events">
             <span class="event-title">{{ event.title }}</span>
             <span class="event-date">{{ event.start | date }}</span>
           </li>
