Tayler--following Delaney suggested video, updated add-pet.component.ts

--- a/petrax-frontend/src/app/add-pet/add-pet.component.html
+++ b/petrax-frontend/src/app/add-pet/add-pet.component.html
@@ -1,15 +1,10 @@
-<!DOCTYPE html>
-<html>
+<h1>Frequently Asked Questions about Pets</h1>
 
-<head>
-  <title>Add New Pet</title>
-</head>
+<div class="add-pet">
+  <app-add-pet></app-add-pet>
 
-<body>
 
-<h1>Add New Pet</h1>
-
-<form action="/petProfile/addNewPet" method="post">
+  <form action="/petProfile/addNewPet" method="post">
 
   <label for="name">Name:</label>
   <input type="text" id="name" name="name"><br>
@@ -54,5 +49,4 @@
   <input type="submit" value="Add New Pet">
 </form>
 
-</body>
-</html>
+</div>
