--- a/src/main/resources/templates/authentication/register.html
+++ b/src/main/resources/templates/authentication/register.html
@@ -32,18 +32,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Register for PETrax</title>
+  <title>User Registration</title>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtSNbZXisyon_iyVc0zzReieqXRO0mXto&libraries=places"></script>
+  <script>
+        function initAutocomplete() {
+            var input = document.getElementById('address');
+            var autocomplete = new google.maps.places.Autocomplete(input);
+        }
+    </script>
 </head>
 <body>
-<h1>Register for PETrax</h1>
-<form action="/authentication/register" method="post">
-  <label for="username">Username:</label>
-  <input type="text" id="username" name="username"><br>
-  <label for="password">Password:</label>
-  <input type="text" id="password" name="password"><br>
-  <label for="verifyPassword">Verify Password:</label>
-  <input type="text" id="verifyPassword" name="verifyPassword"><br>
+<h1>User Registration</h1>
+<form action="/users/create" method="post">
+  <label for="firstName">First Name:</label>
+  <input type="text" id="firstName" name="firstName" required><br>
+
+  <label for="lastName">Last Name:</label>
+  <input type="text" id="lastName" name="lastName" required><br>
+
+  <label for="contactEmail">Email:</label>
+  <input type="email" id="contactEmail" name="contactEmail" required><br>
+
+  <label for="pwHash">Password:</label>
+  <input type="text" id="pwHash" name="pwHash" required><br>
+
+  <label for="address">Address:</label>
+  <input type ="text" id="address" name="address" required><br>
+
   <input type="submit" value="Register">
 </form>
+
+<script>
+        // Initialize the Places Autocomplete
+        initAutocomplete();
+    </script>
 </body>
-</html>
+</html></html>
