--- a/src/main/resources/templates/authentication/login.html
+++ b/src/main/resources/templates/authentication/login.html
@@ -37,8 +37,8 @@
 <h1>Login</h1>
 <form action="/authentication/login" method="post">
   <div>
-    <label for="username">Username</label>
-    <input type="text" id="username" name="username" required>
+    <label for="email">Email</label>
+    <input type="text" id="email" name="email" required>
   </div>
   <div>
     <label for="password">Password</label>
