Tayler-- fixed merge conflict typos

--- a/petrax-frontend/src/app/pet-profile/pet-profile.component.html
+++ b/petrax-frontend/src/app/pet-profile/pet-profile.component.html
@@ -49,6 +49,11 @@
       <input type="submit" value="Add New Pet">
     </div>
 
+<!--    <div class="add-new-pet-button">-->
+<!--      <a routerLink="/pet-profile/addNewPetSuccess">Add New Pet</a>-->
+<!--    </div>-->
+
+
   </div>
 </div>
 
