--- a/petrax-frontend/src/app/navbar/navbar.component.html
+++ b/petrax-frontend/src/app/navbar/navbar.component.html
@@ -1,14 +1,14 @@
 <header>
-    <div class="navbar">
-      <a class="navbar" routerLink="/home">Home</a>
-      <a class="navbar" routerLink="/calendar">Calendar</a>
-      <a class="navbar" routerLink="/faq">FAQ</a>
-      <!--More nav pages can be put here-->
-      <!--User Profile might go where home is not sure yet-->
-    </div>
-  </header>
-  
-  <div class="nav-ele">
-    <router-outlet></router-outlet>
+  <div class="navbar">
+    <a class="navbar" routerLink="/home">Home</a>
+    <a class="navbar" routerLink="/calendar">Calendar</a>
+    <a class="navbar" routerLink="/faq">FAQ</a>
+    <a class="navbar" routerLink="/pet-profile">Pet Profile</a>
+    <!--More nav pages can be put here-->
+    <!--User Profile might go where home is not sure yet-->
   </div>
-  
+</header>
+
+<div class="nav-ele">
+  <router-outlet></router-outlet>
+</div>
