Tayler-- working on add-new-pet-modal and add-new-pet-success

--- a/petrax-frontend/src/app/navbar/navbar.component.html
+++ b/petrax-frontend/src/app/navbar/navbar.component.html
@@ -4,6 +4,8 @@
     <a class="navbar" routerLink="/calendar">Calendar</a>
     <a class="navbar" routerLink="/faq">FAQ</a>
     <a class="navbar" routerLink="/pet-profile">Pet Profile</a>
+<!--    <a class="navbar" routerLink="/add-new-pet">Add New Pet</a>-->
+
     <!--More nav pages can be put here-->
     <!--User Profile might go where home is not sure yet-->
   </div>
