--- a/petrax-frontend/src/app/pet-profile/pet-profile.component.html
+++ b/petrax-frontend/src/app/pet-profile/pet-profile.component.html
@@ -1,58 +1,17 @@
+<div class = "pet-profie">
 
-<div class="add-new-pet">
+  <ul>
+    <li *ngFor="let pet of pets">
+      <span class="name">{{ pet.name }}</span>
+      <span class="breed">{{ pet.breed }}</span>
+      <span class="age">{{ pet.age }}</span>
+      <span class="weight">{{ pet.weight }}</span>
+      <span class="birthday">{{ pet.birthday }}</span>
+      <span class="medications">{{ pet.medications }}</span>
+      <span class="allergies">{{ pet.allergies }}</span>
+      <span class="microchip">{{ pet.microchip }}</span>
+      <span class="diagnoses">{{ pet.diagnoses }}</span>
+    </li>
+  </ul>
 
-  <h1>Add New Pet</h1>
-
-  <div class = "add-new-pet-form">
-
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name"><br>
-
-    <label for="petType">Pet Type:</label>
-    <select id="petType" name="petType">
-      <option value="CAT">Cat</option>
-      <option value="DOG">Dog</option>
-      <option value="BIRD">Bird</option>
-      <option value="FISH">Fish</option>
-      <option value="REPTILE">Reptile</option>
-      <option value="OTHER">Other</option>
-    </select><br>
-
-    <label for="breed">Breed:</label>
-    <input type="text" id="breed" name="breed"><br>
-
-    <label for="age">Age:</label>
-    <input type="number" id="age" name="age"><br>
-
-    <label for="weight">Weight:</label>
-    <input type="number" id="weight" name="weight"><br>
-
-    <label for="birthdate">Birthdate:</label>
-    <input type="date" id="birthdate" name="birthdate"><br>
-
-    <label for="medication">Medication:</label>
-    <input type="text" id="medication" name="medication"><br>
-
-    <label for="allergy">Allergy:</label>
-    <input type="text" id="allergy" name="allergy"><br>
-
-    <label for="microchip">Microchip Number:</label>
-    <input type="text" id="microchip" name="microchip"><br>
-
-    <label for="diagnoses">Diagnoses:</label>
-    <input type="text" id="diagnoses" name="diagnoses"><br>
-
-    <label for="petPic">Photo:</label>
-    <input type="file" id="petPic" name="petPic"><br>
-
-    <div class="add-new-pet-button">
-      <input type="submit" value="Add New Pet">
-    </div>
-
-    <!--    <div class="add-new-pet-button">-->
-    <!--      <a routerLink="/pet-profile/addNewPetSuccess">Add New Pet</a>-->
-    <!--    </div>-->
-
-
-  </div>
 </div>
