Header and footer styling

--- a/petrax-frontend/src/app/app.component.html
+++ b/petrax-frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
-<header>
-  <app-navbar></app-navbar>
-</header>
+<app-navbar></app-navbar>
 
 <div class="app-container">
   <router-outlet></router-outlet>
 </div>
+
+<app-footer></app-footer>
