--- a/petrax-frontend/src/app/home/home.component.html
+++ b/petrax-frontend/src/app/home/home.component.html
@@ -1,5 +1,9 @@
-<div class="container">
-  <h1>Hello, Bootstrap in Angular!</h1>
-  <button class="btn btn-primary">Click Me</button>
+<div class="center-container">
+  <div class="rectangle">
+    <div class="intro-text">
+      Welcome to our website...
+    </div>
+    <button class="login-btn">Login</button>
+    <button class="signup-btn">Sign Up</button>
+  </div>
 </div>
-
