Tayler-- added petType

--- a/petrax-frontend/src/app/pet-profile/pet-detail-modal/pet-detail-modal.component.html
+++ b/petrax-frontend/src/app/pet-profile/pet-detail-modal/pet-detail-modal.component.html
@@ -9,6 +9,7 @@
 
 <div class="modal-body">
   <p><strong>Name:</strong> {{ petName }}</p>
+  <p><strong>Type:</strong> {{ petType }}</p>
   <p><strong>Breed:</strong> {{ petBreed }}</p>
   <p><strong>Age:</strong> {{ petAge | number }}</p>
   <p><strong>Weight:</strong> {{ petWeight | number }}</p>
